Set up some components for merits logic. Work on specialties is required first.

--- a/app/src/main/res/layout/rv_characters_list_empty.xml
+++ b/app/src/main/res/layout/rv_characters_list_empty.xml
@@ -8,5 +8,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="@string/no_characters"/>
+        android:text="@string/rv_characters_notice_empty"/>
 </FrameLayout>
