Initial draft of specialties feature. Proof of concept only, breaks point allocation and allows for only one specialty when any one skill should have n.

--- a/app/src/main/res/drawable/checkbox_full.xml
+++ b/app/src/main/res/drawable/checkbox_full.xml
@@ -3,7 +3,7 @@
     android:shape="oval">
     <solid android:color="#000000"/>
 
-    <size android:width="15dp"
-          android:height="15dp" />
+    <size android:width="@dimen/dot_size"
+          android:height="@dimen/dot_size" />
 
 </shape>
