--- a/app/src/main/res/layout/widget_value_setter.xml
+++ b/app/src/main/res/layout/widget_value_setter.xml
@@ -11,14 +11,26 @@
         android:id="@+id/lblValue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="7"
-        android:text="Value"/>
+        android:layout_weight="12"
+        android:text="Value\nValue"/>
+
+    <CheckBox
+        android:id="@+id/chkSpecialty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <CheckBox
+        android:id="@+id/chkTemplateSpecial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
     <LinearLayout
         android:id="@+id/panelValue"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="10"
+        android:layout_weight="14"
         android:gravity="center_vertical"
         android:orientation="horizontal">
     </LinearLayout>
