--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,7 @@
     <dimen name="spacing_xl">20dp</dimen>
     <dimen name="btn_nbpk">45dp</dimen>
     <dimen name="btn_value_setter">35dp</dimen>
+
+    <!-- Used for dots on attributes, skills, etc. -->
+    <dimen name="dot_size">10dp</dimen>
 </resources>
