--- a/app/src/main/res/layout/dialog_new_specialty.xml
+++ b/app/src/main/res/layout/dialog_new_specialty.xml
@@ -17,6 +17,7 @@
         android:id="@+id/rvDialogSpecialties"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:layout_margin="@dimen/spacing_normal"/>
 
 </LinearLayout>
