--- a/app/src/main/res/layout/dialog_new_specialty.xml
+++ b/app/src/main/res/layout/dialog_new_specialty.xml
@@ -27,8 +27,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvDialogSpecialties"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="@dimen/spacing_normal"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/spacing_normal"
+        android:visibility="gone"/>
 
 </LinearLayout>
