--- a/app/src/main/res/layout/step_summary.xml
+++ b/app/src/main/res/layout/step_summary.xml
@@ -254,7 +254,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:showEditionPanel="false"
-                app:traitCategory="@string/cat_derived"
+                app:traitKind="@string/kind_advantage"
+                app:traitCategory1="@string/cat_derived"
                 app:valueDefault="1"
                 app:valueName="@string/trait_defense"/>
 
@@ -264,7 +265,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:showEditionPanel="false"
-                app:traitCategory="@string/cat_derived"
+                app:traitKind="@string/kind_advantage"
+                app:traitCategory1="@string/cat_derived"
                 app:valueDefault="1"
                 app:valueName="@string/trait_health"/>
 
@@ -274,7 +276,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:showEditionPanel="false"
-                app:traitCategory="@string/cat_derived"
+                app:traitKind="@string/kind_advantage"
+                app:traitCategory1="@string/cat_derived"
                 app:valueDefault="1"
                 app:valueName="@string/trait_initiative"/>
 
@@ -284,7 +287,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:showEditionPanel="false"
-                app:traitCategory="@string/cat_derived"
+                app:traitKind="@string/kind_advantage"
+                app:traitCategory1="@string/cat_derived"
                 app:valueDefault="1"
                 app:valueName="@string/trait_morality"/>
 
@@ -294,7 +298,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:showEditionPanel="false"
-                app:traitCategory="@string/cat_derived"
+                app:traitKind="@string/kind_advantage"
+                app:traitCategory1="@string/cat_derived"
                 app:valueDefault="1"
                 app:valueName="@string/trait_speed"/>
 
@@ -304,7 +309,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:showEditionPanel="false"
-                app:traitCategory="@string/cat_derived"
+                app:traitKind="@string/kind_advantage"
+                app:traitCategory1="@string/cat_derived"
                 app:valueDefault="1"
                 app:valueName="@string/trait_willpower"/>
         </LinearLayout>
