--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,7 +13,9 @@
         <attr name="valueName" format="string" />
         <attr name="valueDefault" format="integer" />
         <attr name="valueMaximum" format="integer" />
-        <attr name="traitCategory" format="string" />
+        <attr name="traitKind" format="string" />
+        <attr name="traitCategory1" format="string" />
+        <attr name="traitCategory2" format="string" />
         <attr name="showEditionPanel" format="boolean" />
     </declare-styleable>
 </resources>
