--- a/app/src/main/res/layout/row_merit.xml
+++ b/app/src/main/res/layout/row_merit.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/chkMerit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
