--- a/app/src/main/res/drawable/checkbox_empty.xml
+++ b/app/src/main/res/drawable/checkbox_empty.xml
@@ -3,8 +3,8 @@
     android:shape="oval">
     <solid android:color="#FFFFFF"/>
 
-    <size android:width="15dp"
-          android:height="15dp" />
+    <size android:width="@dimen/dot_size"
+          android:height="@dimen/dot_size" />
 
     <stroke android:width="1dp"
             android:color="#000000" />
