--- a/app/src/main/res/layout/row_merit.xml
+++ b/app/src/main/res/layout/row_merit.xml
@@ -18,18 +18,18 @@
 
         <TextView
             android:id="@+id/txtMeritName"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
             android:text="Sample"/>
 
         <LinearLayout
             android:id="@+id/panelMeritValue"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_gravity="center_vertical">
         </LinearLayout>
     </LinearLayout>
 
