--- a/app/src/main/res/layout/row_merit.xml
+++ b/app/src/main/res/layout/row_merit.xml
@@ -4,7 +4,7 @@
               android:layout_marginEnd="@dimen/spacing_normal"
               android:layout_marginStart="@dimen/spacing_normal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
